Added authors in 'main.tex'

--- a/report/main.tex
+++ b/report/main.tex
@@ -12,9 +12,12 @@
 \usepackage{subfiles}
 
 \title{
-    Cybersecurity and National Defence\\
+    Cybersecurity and National Defence\\--\\
     \Large Steganography}
-\author{}
+
+\author{\\Alberto Eusebio, Francesco Imparato, Federico Morro,\\Salvatore
+Orlando, Giulia Rivetti}
+
 \date{}
 
 \begin{document}
