Chapter/Subchapter try

--- a/report/sections/00_Example_Chapter.tex
+++ b/report/sections/00_Example_Chapter.tex
@@ -4,5 +4,8 @@
     \section{Chapter title}
     \textbf{Example text:}
     This is an example of a chapter
+
+    \subsection{Subchapter title}
+    Text
     \pagebreak
 \end{document}
