--- a/report/sections/template.tex
+++ b/report/sections/template.tex
@@ -1,6 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+    \section{The chapter name}
     \textbf{Hello world!}
     Hello, here is some text without a meaning...
 \end{document}
