Changed quotation mark symbols in '01_Introduction.tex'

--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -7,7 +7,7 @@
 
 Steganography is the technique of hiding a message inside another message or a physical object.
 The word \textit{steganography} comes from the Greek word \textit{steganographia}, which is the combination of 
-\textit{steganós} meaning "covered" and \textit{-graphia} meaning "writing".
+\textit{steganós} meaning ``covered'' and \textit{-graphia} meaning ``writing''.
 \\
 The first testimonials of the use of steganography date back to 440 BC in Greece mentioned by Herodotus in his
 \emph{Histories}: Histitateus sent a message to Aristagoras by writing a text message on the shaved head of one of his
