--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -28,7 +28,7 @@ be decoded.
 
 In this paper we will focus on digital steganography, the way in which it can be performed, examples of its application
 in known cases and in particular the threats and opportunities regarding the cybersecurity implications of its use in
-ditigal and communications systems.
+digital and communications systems.
 
 \pagebreak
 
