Added 'abstract' file and folder in report

--- a/report/main.tex
+++ b/report/main.tex
@@ -22,9 +22,14 @@ Orlando, Giulia Rivetti}
 
 \begin{document}
     \maketitle
+
+    \pagebreak
+
+    \subfile{sections/00_Abstract/00_Abstract.tex}
     \tableofcontents
 
     \pagebreak
+
     \subfile{sections/01_Introduction/01_Introduction.tex}
 
 \end{document}
