Changed title in main.tex; removed *.sh from .gitignore; added clear.sh; updated README.md

--- a/report/main.tex
+++ b/report/main.tex
@@ -13,7 +13,7 @@
 
 \title{
     Cybersecurity and National Defence\\--\\
-    \Large Steganography}
+    \Large Steganography: steganalysis}
 
 \author{\\Alberto Eusebio, Francesco Imparato, Federico Morro,\\Salvatore
 Orlando, Giulia Rivetti}
