Introduction: steganalysis last sentence

--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -26,9 +26,9 @@ This is one of the greatest differences of steganography with respect to cryptog
 messages are visible so they attract interest and it's more likely that they will be subject to some type of attacks to
 be decoded.
 
-In this paper we will focus on digital steganography, the way in which it can be performed, examples of its application
-in known cases and in particular the threats and opportunities regarding the cybersecurity implications of its use in
-digital and communications systems.
+In this paper we will focus on steganalysis, the study of detecting and if possible recovering hidden messages encoded
+using steganography, the way in which it can be performed, examples of its application in known cases and in particular
+the threats and opportunities regarding the cybersecurity implications of its use in digital and communications systems.
 
 \pagebreak
 
