Set up bibliography; updated .gitignore and clear.sh in order to clean up all the tmp useless files generated by the bibliography

--- a/report/main.tex
+++ b/report/main.tex
@@ -8,8 +8,11 @@
 \usepackage{multicol}
 \usepackage{listings}
 \usepackage{hyperref}
+\usepackage{biblatex}
 
 \usepackage{subfiles}
+
+\addbibresource{references.bib}
 
 \title{
     Cybersecurity and National Defence\\--\\
@@ -32,4 +35,5 @@ Orlando, Giulia Rivetti}
 
     \subfile{sections/01_Introduction/01_Introduction.tex}
 
+    \printbibliography
 \end{document}
