Added a paragraph in 01_Introduction.tex

--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -35,13 +35,18 @@ cryptography: in cryptography the encrypted messages are visible so they attract
 interest and it's more likely that they will be subject to some type of attacks
 to be decoded.
 
-In this paper we will focus on steganalysis, the study of detecting and if
-possible recovering hidden messages encoded using steganography, the way in
-which it can be performed, examples of its application in known cases and in
-particular the threats and opportunities regarding the cybersecurity
-implications of its use in digital and communications systems.
+In this paper we will focus on steganalysis, the study of detecting and, if
+possible, recovering hidden messages encoded using steganography, the way in
+which it can be performed, examples of its application in known cases and
+the threats and opportunities regarding the cybersecurity implications of its
+use in digital and communications systems.
+
+We can call steganalysis successful (and consequentially that the steganography
+is broken) when there is the evidence of an hidden message in the cover signal.
+Moreover, the embedded information can also be crypted, in that case the
+attacker (the one who tries to find the hidden message) will have to perform
+cryptanalysis in order to decrypt the information.
 
 \pagebreak
-
 
 \end{document}
