added second chapter structure

--- a/report/main.tex
+++ b/report/main.tex
@@ -32,8 +32,9 @@ Orlando, Giulia Rivetti}
     \tableofcontents
 
     \pagebreak
-
+    
     \subfile{sections/01_Introduction/01_Introduction.tex}
+    \subfile{sections/02_Steganography/02_Steganography.tex}
 
     \printbibliography
 \end{document}
