Added reference of steganography definition in 01_Introduction.tex

--- a/report/sections/01_Introduction/01_Introduction.tex
+++ b/report/sections/01_Introduction/01_Introduction.tex
@@ -2,11 +2,10 @@
 
 \begin{document}
 
-
 \section{Introduction}
 
 Steganography is the technique of hiding a message inside another message or a
-physical object.
+physical object.\cite{steganography-definition}
 The word \textit{steganography} comes from the Greek word
 \textit{steganographia}, which is the combination of \textit{steganós} meaning
 ``covered'' and \textit{-graphia} meaning ``writing''.
