Started writing 02_Steganography.tex

--- a/report/sections/02_Steganography/02_Steganography.tex
+++ b/report/sections/02_Steganography/02_Steganography.tex
@@ -1,11 +1,23 @@
 \documentclass[../../main.tex]{subfiles}
 
 \begin{document}
-    \section{Steganography}
 
-    \subsection{Steganography}
+\section{Steganography}
 
-    \subsection{Watermarking}
+As we already stated, steganography is used to hide a message in a
+\emph{cover type}. We can define a cover type as the mean used to communicate,
+which can be a text file, an image, an audio recording, but also people, like in
+the case of the servants that we have mentioned earlier, etc\dots
 
-    \pagebreak
+In all these cases, the message has been \emph{embedded} into the cover type.
+Here we can make a distinction between steganography and watermarking since in
+both cases a message is encoded into a communication's mean, but with different
+purposes.
+
+\subsection{Steganography}
+
+\subsection{Watermarking}
+
+\pagebreak
+
 \end{document}
