added TCP/IP part

--- a/report/main.tex
+++ b/report/main.tex
@@ -9,10 +9,11 @@
 \usepackage{listings}
 \usepackage{hyperref}
 \usepackage{biblatex}
-
+\usepackage{graphicx}
 \usepackage{subfiles}
 
 \addbibresource{references.bib}
+\graphicspath{ {../assets/} }
 
 \title{
     Cybersecurity and National Defence\\--\\
@@ -35,6 +36,7 @@ Orlando, Giulia Rivetti}
     
     \subfile{sections/01_Introduction/01_Introduction.tex}
     \subfile{sections/02_Steganography/02_Steganography.tex}
+    \subfile{sections/03_Steganalysis/03_Steganalysis.tex}
 
     \printbibliography
 \end{document}
