--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -46,7 +46,7 @@
     \begin{figure}[h]
         \centering
         \caption{Structure of TCP packet}
-        \includegraphics[scale=0.4]{udp_header.png}
+        \includegraphics[scale=0.]{udp_header.png}
     \end{figure}
 
     \pagebreak
