Text steganalysis intro, cover types intro, layout fixing

--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -17,6 +17,17 @@
     \subsubsection{Structural}
     
 
+    \subsection{Cover types}
+    In the following sections, we will treat several \emph{cover} in which
+    steganography can be applied to hide data.
+    In particular we will focus on some of the most common methods and how is
+    possible to do a steganalysis process in order to detect and in some cases
+    even retrieve the embedded information.
+    Notice that different cover types requires completely different approaches
+    due to intrinsic factors such as size, presence of redudant data,
+    perceptibility of modification by a human or formats in which the bits of
+    the cover are stored.
+
 
     \subsection{Images}
     Images are likely to be chosen to hide secret messages due to the low
@@ -88,6 +99,14 @@
     
     
     \subsection{Text}
+    \emph{Soft-copy text} is the most difficult place in which steganography is
+    performed due to the fact that there are no redundant informations nor large
+    set of data that can be slightly modified without affecting the overall look
+    of the cover.
+    % Read "Modern Text Hiding, Text Steganalysis, and Application"
+    %   from sources folder on Drive before writing here
+
+
     
     
 
