Started writing subsection; changes in guidelines.md: - subsubsection 'Difference Image Histogram method' in '03_Steganalysis.tex'; - added further information about cite command

--- a/report/main.tex
+++ b/report/main.tex
@@ -8,7 +8,7 @@
 \usepackage{multicol}
 \usepackage{listings}
 \usepackage{hyperref}
-\usepackage{biblatex}
+\usepackage[sorting=none]{biblatex}
 \usepackage{graphicx}
 \usepackage{subfiles}
 
