--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,9 @@
+@article{methodology-steganalysis-images,
+    author = "{A. Hernandez-Chamorro, A. Espejel-Trujillo, J. Lopez-Hernandez, M. Nakano-Miyatake, H. Perez-Meana}",
+    title = "A Methodology of Steganalysis for Images",
+    year = "2009"
+}
+
 @online{steganography-definition,
     author = "Merriam Webster",
     title = "Steganography definition",
