--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -74,8 +74,15 @@
     
 
     \subsubsection{Difference Image Histogram method}
-
-
+    The \emph{Difference Image Histogram method} is derived by the easier idea
+    of analysing the \emph{histogram distribution} of a natural image and its
+    stegoimage. Anyway, when we are steganalysing an image, we \emph{do not}
+    have the natural image, so what we could do is comparing the histogram
+    distribution of the suspect image with a set of natural images, but the
+    problem is that the variation between two different images is \emph{bigger}
+    than the distribution variation between a natural image and its stegoimage.
+    \cite{methodology-steganalysis-images}
+    
     \subsubsection{Closest Color Pair method}
 
 
